--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts"
+    "dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts",
+    "typeorm": "typeorm-ts-node-commonjs -d ./src/config/config.development.ts",
+    "migration:generate": "typeorm-ts-node-commonjs -d ./src/config/config.development.ts migration:generate ./src/database/migrations/default",
+    "migration:run": "typeorm-ts-node-commonjs -d ./src/config/config.development.ts migration:run"
   }
 }
